src/sections/Navigation.scss
@keyframes goFromRight {
  from {
    opacity: 0;
    transform: translateX(-100%);
  }
  to {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes hideToRight {
  from {
    opacity: 1;
    transform: translateX(0);
  }
  to {
    opacity: 0;
    transform: translateX(-100%);
  }
}

@keyframes goBackUp {
  from {
    opacity: 1;
    transform: translateY(0);
  }
  to {
    opacity: 0;
    transform: translateY(-100%);
  }
}

@keyframes goFromDown {
  from {
    opacity: 0;
    transform: translateY(-100%);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

nav {
  font-family: "Cabinet Grotesk", sans-serif;
  color: var(--primary-white);
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: fixed;
  width: 100vw;
  max-width: var(--media-desktop-small);
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  background-color: var(--primary-black);
  padding-block: 1rem;
  padding-inline: 1rem;
  z-index: 999;

  .title {
    font-size: 1.5rem;
    font-weight: 400;

    & span {
      font-weight: 700;
    }

    transition: all 0.3s ease;

    &:hover {
      transform: translateY(-5px);

      & > a {
        color: var(--primary-green);
      }
    }
  }
}

#desktop-nav {
  display: none;
}

.theme-toggle-wrapper {
  display: flex;
  align-items: center;
  gap: 1rem;
}

.right-side {
  display: flex;
  gap: 1rem;
}

.nav-controls {
  display: flex;
  gap: 4rem;
}

.theme-toggle {
  width: 2rem;
  height: 1rem;
  border: 1px solid var(--primary-white);
  border-radius: 10px;

  & span {
    width: calc(1rem - 4px);
    height: calc(1rem - 4px);
    background-color: var(--primary-white);
    border-radius: 50%;
    display: block;
    transform: translateX(1px) translateY(1px);
  }
}

.hamburger {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 2rem;
  height: 1rem;

  span {
    width: 100%;
    height: 1px;
    background-color: var(--primary-white);
    transition: all 0.5s;
  }

  &.active {
    span {
      &:first-of-type {
        animation: none;
        transform: rotate(45deg) translate(0.55rem, 0.4rem);
      }

      &:nth-of-type(2) {
        display: none;
        animation: none;
      }

      &:nth-of-type(3) {
        animation: none;
        transform: rotate(-45deg) translate(0.25rem, -0.15rem);
      }
    }
  }
}

#mobile-nav {
  position: absolute;
  top: 46px;
  left: 0;
  width: 100vw;
  height: calc(100vh - 46px);
  background-color: var(--primary-black);
  padding-inline: 1rem;
  padding-block: 3rem;
  z-index: 998;
  list-style: none;
  margin-inline-start: 0;
  text-align: right;
  animation: hideToRight 0.5s ease-in-out forwards;
  animation-delay: 0.7s;

  .you-are-here {
    display: none;
    opacity: 0;

    &.active {
      display: inline-block;
      color: var(--primary-purple);
      font-size: 0.4em;
      font-style: italic;
      margin-right: 1rem;
      position: relative;
      opacity: 0.7;

      &:after {
        content: "";
        height: 1px;
        background-color: var(--primary-purple);
        display: block;
        position: absolute;
        width: 175%;
      }
    }
  }

  li {
    &:first-of-type {
      opacity: 1;
      animation: goBackUp 0.5s ease-in-out forwards;
    }

    &:nth-of-type(2) {
      opacity: 1;
      animation: goBackUp 0.5s ease-in-out forwards;
      animation-delay: 0.1s;
    }

    &:nth-of-type(3) {
      opacity: 1;
      animation: goBackUp 0.5s ease-in-out forwards;
      animation-delay: 0.2s;
    }

    &:nth-of-type(4) {
      opacity: 1;

      animation: goBackUp 0.5s ease-in-out forwards;
      animation-delay: 0.3s;
    }

    &:nth-of-type(5) {
      opacity: 1;
      animation: goBackUp 0.5s ease-in-out forwards;
      animation-delay: 0.4s;
      font-size: 2rem;
      margin-top: 5rem;
    }
  }

  &.active {
    animation: goFromRight 0.5s ease-in-out forwards;

    li {
      &:first-of-type {
        opacity: 0;
        animation: goFromDown 0.5s ease-in-out forwards;
        animation-delay: 0.3s;
      }

      &:nth-of-type(2) {
        opacity: 0;
        animation: goFromDown 0.5s ease-in-out forwards;
        animation-delay: 0.4s;
      }

      &:nth-of-type(3) {
        opacity: 0;
        animation: goFromDown 0.5s ease-in-out forwards;
        animation-delay: 0.5s;
      }

      &:nth-of-type(4) {
        opacity: 0;
        animation: goFromDown 0.5s ease-in-out forwards;
        animation-delay: 0.6s;
      }

      &:nth-of-type(5) {
        opacity: 0;
        animation: goFromDown 0.5s ease-in-out forwards;
        animation-delay: 0.7s;
        font-size: 2rem;
        margin-top: 5rem;
      }
    }
  }

  li {
    font-family: "Cabinet Grotesk", sans-serif;
    font-size: 3rem;
    margin-block: 1rem;
    opacity: 0;
  }
}

#lang-switcher p {
  display: inline-block;
}

@media (min-width: 680px) {
  #desktop-nav {
    display: flex;
    list-style: none;
    display: flex;
    gap: 3vw;

    & li a {
      display: inline-block;
      transition: all 0.3s ease;

      &:hover {
        color: var(--primary-green);
        transform: translateY(-5px);
      }
    }
  }

  #mobile-nav,
  .hamburger {
    display: none;
  }
}

